--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h2>Grasshopper Pie</h2>
     <p>Recipe by Ethan Gray</p>
-    <img src ="image/grassHopperPie.jpg" alt="Slice of Grasshopper Pie" width="1200" height="800">
+    <img src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTLqTwcAIMLJY6wxR1MNrGETjrdg9nJ_-RRsw&s" alt="Slice of Grasshopper Pie" width="1200" height="800">
   </body>
   <hr>
     <p><a href="bellevuecollege.edu" class ="return">Back to the Main Page</a> <span>This page is created as an academic
