--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang ="en">
 <head>
   <h1>Good Things froom The Kitchen</h1>
-  <a href ="html/grassHopperPie.html">Grass Hopper Pie</a>
+  <a href ="https://ethangray6.github.io/index.html">Grass Hopper Pie</a>
 </head>
   <body>
     <h2>Grasshopper Pie</h2>
