--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang ="en">
 <head>
   <h1>Good Things froom The Kitchen</h1>
-  <a href ="https://ethangray6.github.io/index.html">Grass Hopper Pie</a>
+  <a href ="https://ethangray6.github.io/codingassignment4Correct/">Grass Hopper Pie</a>
 </head>
   <body>
     <h2>Grasshopper Pie</h2>
     <p>Recipe by Ethan Gray</p>
-    <img src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTLqTwcAIMLJY6wxR1MNrGETjrdg9nJ_-RRsw&s" alt="Slice of Grasshopper Pie" width="1200" height="800">
+    <img src ="image/grasshopperPie.jpg" alt="Slice of Grasshopper Pie" width="1200" height="800">
   </body>
   <hr>
     <p><a href="bellevuecollege.edu" class ="return">Back to the Main Page</a> <span>This page is created as an academic
